выровняла карточку товара, а также логотип в футере стал картинкой

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                         <ul class="menu-top__list closed" id="menuList">
                             <li class="menu-top__logo">
                                 <a class="menu-top__logo-link" href="index.html">
-                                    <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png">
-                                    <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png">
-                                    <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png">
+                                    <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">
+                                    <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png" width="113px" height="46px" alt="Mishka">
+                                    <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png" width="149px" height="72px" alt="Mishka">
                                 </a>
                             </li>
                            <li class="menu-top__item">
@@ -233,7 +233,7 @@
                    </div>
                 </div>
                 <div class="contacts__map">
-                    <picture>
+                    <picture class="contacts__picture">
                         <source media="(min-width: 320px) and (orientation: portrait)"
                                 srcset="src/img/map-mobile-2x.webp 2x, src/img/map-mobile-1x.webp 1x" type="image/webp"
                                 srcset="src/img/map-mobile-2x.jpg 2x, src/img/map-mobile-1x.jpg 1x" type="image/jpg">
@@ -246,7 +246,7 @@
                        <img src="src/img/map-mobile-1x.jpg" alt="Map">
                    </picture>
                </div>
-               <button class="btn contacts__btn">Напишите нам</button>
+            <button class="btn contacts__btn">Напишите нам</button>
         </div>
     </section>
 </main>
@@ -255,23 +255,17 @@
         <div class="footer__inner">
             <div class="footer__logo">
                 <a class="footer__logo-link">
-                  <span class="footer__logo-icon"></span>
+                    <img class="footer__logo" src="src/img/logo-footer.png" width="102px" height="34px" alt="Mishka">
                 </a>
            </div>
            <div class="footer__social">
-                <a class="footer__link footer__insta" href="#">
-                    <!-- <span class="footer__insta"></span> -->
-                </a>
-                <a class="footer__link footer__facebook" href="#">
-                    <!-- <span class="footer__facebook"></span> -->
-                </a>
-                <a class="footer__link footer__twitter" href="#">
-                    <!-- <span class="footer__twitter"></span> -->
-                </a>
+                <a class="footer__link footer__insta" href="#"></a>
+                <a class="footer__link footer__facebook" href="#"></a>
+                <a class="footer__link footer__twitter" href="#"></a>
            </div>
            <div class="footer__copyright">
-               <p class="footer__creator">Разработано
-                   <span class="footer__icon"></span>
+                <p class="footer__creator">Разработано
+                    <span class="footer__icon"></span>
               </p>
            </div>
        </div>
