--- a/form.html
+++ b/form.html
@@ -29,9 +29,9 @@
                         <ul class="menu-top__list closed" id="menuList">
                             <li class="menu-top__logo">
                                 <a class="menu-top__logo-link" href="index.html">
-                                    <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png">
-                                    <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png">
-                                    <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png">
+                                    <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">
+                                    <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png" width="113px" height="46px" alt="Mishka">
+                                    <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png" width="149px" height="72px" alt="Mishka">
                                 </a>
                             </li>
                            <li class="menu-top__item">
@@ -180,7 +180,7 @@
         <div class="footer__inner">
             <div class="footer__logo">
                 <a class="footer__logo-link">
-                  <span class="footer__logo-icon"></span>
+                    <img class="footer__logo" src="src/img/logo-footer.png" width="102px" height="34px" alt="Mishka">
                 </a>
            </div>
            <div class="footer__social">
