Синхронизация с изменениями от Кати

--- a/form.html
+++ b/form.html
@@ -39,7 +39,7 @@
                                <a class="menu-top__link" href="form.html" target="blank">Вязание на заказ</a>
                            </li>
                            <li class="menu-top__item">
-                               <form class="search-form" action="" method="get">
+                               <form class="search-form"  method="get">
                                    <label class="search-label">Поиск по сайту</label>
                                    <input class="search-input" type="search" name="search" placeholder="Поиск по сайту">
                                    <button class="search-submit" type="submit"></button>
