--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
                 <div class="catalog-card__picture">
                     <picture>
                        <source media="(min-width: 320px) and (orientation: portrait)"
-                               srcset="src/img/triple-mobile-2x.webp 2x, src/img/triple-mobile-1x.webp 1x" type="image/webp"
-                               srcset="src/img/triple-mobile-2x.jpg 2x, src/img/triple-mobile-1x.jpg 1x" type="image/jpg">
+                               srcset = "src/img/triple-mobile-2x.webp 2x, src/img/triple-mobile-1x.webp 1x" type ="image/webp"
+                               srcset = "src/img/triple-mobile-2x.jpg 2x, src/img/triple-mobile-1x.jpg 1x" type ="image/jpg">
                        <source media="(min-width: 768px) and (orientation: portrait)"
-                               srcset="src/img/triple-tablet-2x.webp 2x, src/img/triple-tablet-1x.webp 1x" type="image/webp"
-                               srcset="src/img/triple-tablet-2x.jpg 2x, src/img/triple-tablet-1x.jpg 1x" type="image/jpg">
+                               srcset = "src/img/triple-tablet-2x.webp 2x, src/img/triple-tablet-1x.webp 1x" type ="image/webp"
+                               srcset = "src/img/triple-tablet-2x.jpg 2x, src/img/triple-tablet-1x.jpg 1x" type ="image/jpg">
                        <source media="(min-width: 1024px) and (orientation: landscape)"
-                               srcset="src/img/triple-desktop-2x.webp 2x, src/img/triple-desktop-1x.webp 1x" type="image/webp"
-                               srcset="src/img/triple-desktop-2x.jpg 2x, src/img/triple-desktop-1x.jpg 1x" type="image/jpg">
+                               srcset = "src/img/triple-desktop-2x.webp 2x, src/img/triple-desktop-1x.webp 1x" type ="image/webp"
+                               srcset = "src/img/triple-desktop-2x.jpg 2x, src/img/triple-desktop-1x.jpg 1x" type ="image/jpg">
                        <img class="catalog-card__img" src="src/img/triple-mobile-1x.jpg" alt="Вязаные корзинки">
                    </picture>
                 </div>
@@ -278,9 +278,9 @@
     </div>
 </footer>
 
-<script type="text/javascript" src="src/js/hamburger.js"></script>
-<script type="text/javascript" src="src/js/slider.js"></script>
+<script  src="src/js/hamburger.js"></script>
+<script  src="src/js/slider.js"></script>
 <!--<script type="text/javascript" src="src/js/modal.js"></script>-->
-<script type="text/javascript" src="src/js/main.js"></script>
+<script src="src/js/main.js"></script>
 </body>
 </html>
