--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="dist/css/main.css">
     <script src="src/js/picturefill.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
+
 <!--<link rel="preload" href="src/js/main.js" as="script">-->
 
     <link rel="preload" href="src/fonts/opensans-regular.woff2" as="font" type="font/woff2" crossorigin>
@@ -45,7 +45,7 @@
                            <a class="menu-top__link" href="form.html" target="blank">Вязание на заказ</a>
                        </li>
                        <li class="menu-top__item">
-                           <form class="search-form" action="" method="get">
+                           <form class="search-form"  method="get">
                                <label class="search-label">Поиск по сайту</label>
                                <input class="search-input" type="search" name="search" placeholder="Поиск по сайту">
                                <button class="search-submit" type="submit"></button>
@@ -230,7 +230,7 @@
 
 <script src="src/js/picturefill.js"></script>
 <script src="src/js/main.js"></script>
-<script type="text/javascript" src="src/js/hamburger.js"></script>
+<script  src="src/js/hamburger.js"></script>
 
 </body>
 </html>
