--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <div class="menu-top">
 
                        <div class="hamburger-menu">
-                           <button class="hamburger-btn closed" id="buttonMenu">
+                           <span class="hamburger-btn closed" id="buttonMenu">
                                <!--<span class="hamburger">
                                   <span class="openBtn" id="openButton"></span>
                                   <span class="closeBtn" id="closeButton"></span>
                               </span>-->
-                          </button>
+                            </span>
                        </div>
                         <ul class="menu-top__list closed" id="menuList">
                             <li class="menu-top__logo">
