--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
 
 
-                           <button class="hamburger-btn closed" id="buttonMenu">
+                           <span class="hamburger-btn closed" id="buttonMenu">
                                <!--<span class="hamburger">
                                   <span class="openBtn" id="openButton"></span>
                                   <span class="closeBtn" id="closeButton"></span>
                               </span>-->
-                          </button>
+                            </span>
 
 
                        </div>
