забрал список правок которые надо исправить по проекту

--- a/form.html
+++ b/form.html
@@ -18,12 +18,12 @@
 <body>
     <header class="header">
         <div class="hamburger-menu">
-            <button class="hamburger-btn closed" id="buttonMenu">
+            <span class="hamburger-btn closed" id="buttonMenu">
                 <span class="hamburger">
                    <span class="openBtn" id="openButton"></span>
                    <span class="closeBtn" id="closeButton"></span>
                </span>
-           </button>
+              </span>
         </div>
         <nav class="nav">
             <div class="menu-top">
@@ -171,7 +171,7 @@
                         </div>
                     </form>
                 </section>
-                
+
                 <span class="page-form__note">*Поля обязательны для заполнения</span>
                 <button class="btn page-form__btn">Отправить заказ</button>
             <!--</form>-->
@@ -205,5 +205,6 @@
        </div>
     </div>
 </footer>
+<script src="src/js/hamburger.js"></script>
   </body>
 </html>
