--- a/catalog.html
+++ b/catalog.html
@@ -23,17 +23,20 @@
     <nav class="nav">
         <div class="menu-top">
                 <div class="hamburger-menu">
-                        <button class="hamburger-btn closed" id="buttonMenu">
+                        <span class="hamburger-btn closed" id="buttonMenu">
                             <span class="hamburger">
                                <span class="openBtn" id="openButton"></span>
                                <span class="closeBtn" id="closeButton"></span>
                            </span>
-                       </button>
+                          </span>
                     </div>
+                    <a href="" class="menu-top__logo-link">
+                      <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">
+                    </a>
                     <ul class="menu-top__list closed" id="menuList">
                         <li class="menu-top__logo">
                             <a class="menu-top__logo-link" href="index.html">
-                                <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">
+                                <!--<img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">-->
                                 <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png" width="113px" height="46px" alt="Mishka">
                                 <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png" width="149px" height="72px" alt="Mishka">
                             </a>
