--- a/index.html
+++ b/index.html
@@ -23,24 +23,16 @@
             <div class="menu-top">
 
                        <div class="hamburger-menu">
-<<<<<<< HEAD
-
-
-
-=======
->>>>>>> 40d10b8cc6a43058543373755e880dfbc47df0e5
                            <span class="hamburger-btn closed" id="buttonMenu">
                                <!--<span class="hamburger">
                                   <span class="openBtn" id="openButton"></span>
                                   <span class="closeBtn" id="closeButton"></span>
                               </span>-->
                             </span>
-<<<<<<< HEAD
-
-
-=======
->>>>>>> 40d10b8cc6a43058543373755e880dfbc47df0e5
                        </div>
+                       <!--<a href="" class="menu-top__logo-link">
+                         <img  class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">
+                        </a>-->
                         <ul class="menu-top__list closed" id="menuList">
                             <li class="menu-top__logo">
                                 <a class="menu-top__logo-link" href="index.html">
