--- a/catalog.html
+++ b/catalog.html
@@ -22,17 +22,15 @@
   <header class="header">
     <nav class="nav">
         <div class="menu-top">
-                <div class="hamburger-menu">
-                        <span class="hamburger-btn closed" id="buttonMenu">
-                            <span class="hamburger">
-                               <span class="openBtn" id="openButton"></span>
-                               <span class="closeBtn" id="closeButton"></span>
-                           </span>
-                          </span>
-                    </div>
-                    <a href="" class="menu-top__logo-link">
-                      <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">
-                    </a>
+                <div class="menu-top">
+                        <div class="menu-top__crown">
+                                <a class="menu-top__logo-link" href="index.html">
+                                    <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">
+                                </a>
+                               <div class="hamburger-menu">
+                                   <span class="hamburger-btn closed" id="buttonMenu"></span>
+                               </div>
+                        </div>
                     <ul class="menu-top__list closed" id="menuList">
                         <li class="menu-top__logo">
                             <a class="menu-top__logo-link" href="index.html">
