--- a/index.html
+++ b/index.html
@@ -19,26 +19,18 @@
     <header class="header">
         <nav class="nav">
             <div class="menu-top">
+                <div class="menu-top__crown">
+                        <a class="menu-top__logo-link" href="index.html">
+                            <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">
+                        </a>
                        <div class="hamburger-menu">
-
-
-
-                           <span class="hamburger-btn closed" id="buttonMenu">
-                               <!--<span class="hamburger">
-                                  <span class="openBtn" id="openButton"></span>
-                                  <span class="closeBtn" id="closeButton"></span>
-                              </span>-->
-                            </span>
-
-
+                           <span class="hamburger-btn closed" id="buttonMenu"></span>
                        </div>
-                       <!--<a href="" class="menu-top__logo-link">
-                         <img  class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">
-                        </a>-->
-                        <ul class="menu-top__list closed" id="menuList">
+                </div>
+                <ul class="menu-top__list closed" id="menuList">
                             <li class="menu-top__logo">
                                 <a class="menu-top__logo-link" href="index.html">
-                                    <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka">
+                                    <!-- <img class="menu-top__logo-mobile" src="src/img/logo-mobile.png" width="86px" height="35px" alt="Mishka"> -->
                                     <img class="menu-top__logo-tablet" src="src/img/logo-tablet.png" width="113px" height="46px" alt="Mishka">
                                     <img class="menu-top__logo-desktop" src="src/img/logo-desktop.png" width="149px" height="72px" alt="Mishka">
                                 </a>
@@ -53,9 +45,9 @@
                            </li>
                            <li class="menu-top__item">
                                <form class="search-form" action="" method="get">
+                                   <button class="search-submit" type="submit"></button>
                                    <label class="search-label">Поиск по сайту</label>
                                    <input class="search-input" type="search" name="search" placeholder="Поиск по сайту">
-                                   <button class="search-submit" type="submit"></button>
                                </form>
                            </li>
                            <li class="menu-top__item menu-top__item--cart">
