новая форма, начала редактировать стили для нее

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <table class="catalog-card__table table">
                        <tr class="catalog-card__row table__row">
                           <td class="catalog-card__cell table__cell">Цвет:</td>
-                          <td class="catalog-card__cell table__cell">"Тиффани"/серый</td>
+                          <td class="catalog-card__cell table__cell">«Тиффани»/серый</td>
                         </tr>
                         <tr class="catalog-card__row table__row">
                           <td class="catalog-card__cell table__cell">Диаметр:</td>
