--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
     <input class="modal-ctg__input" type="radio" name="check">
     <label class="modal-ctg__size">L</label>
   </div>
-  <button class="btn modal-ctg__btn">Добавить</button>
+  <button class="btn modal-ctg__btn" id="closeBtn">Добавить</button>
 </div>
-<div class="overlay"></div>
+<div class="overlay" id="myOverlay"></div>
           </div>
       </section>
       <section class="about-us">
