изменила нижнее меню в хэдэре и увеличила область ссылки

--- a/form.html
+++ b/form.html
@@ -76,12 +76,12 @@
                     <div class="form-page__inner">
                         <legend class="form-page__legend">Тип</legend>
                         <div class="form-page__section">
-                            <input class="form-page__input" type="radio" id="radio-1" name="radio" checked>
-                            <label class="form-page__label" for="radio-1">Аксессуар для интерьера</label>
+                            <input class="form-page__input form-page__input--radio" type="radio" id="radio-1" name="radio" checked>
+                            <label class="form-page__label form-page__label--radio" for="radio-1">Аксессуар для интерьера</label>
                         </div>
                         <div class="form-page__section">
-                            <input class="form-page__input" type="radio" id="radio-2" name="radio">
-                            <label class="form-page__label" for="radio-2">Детская игрушка</label>
+                            <input class="form-page__input form-page__input--radio" type="radio" id="radio-2" name="radio">
+                            <label class="form-page__label form-page__label--radio" for="radio-2">Детская игрушка</label>
                         </div>
                     </div>
                 </fieldset>
