подогнал планшетную версию каталога под PerfectPixel (почти)

--- a/catalog.html
+++ b/catalog.html
@@ -252,7 +252,8 @@
            </div>
         </div>
     </footer>
-<script src="src/js/main.js"></script>
-<script  src="src/js/hamburger.js"></script>
+    <script type="text/javascript" src="dist/js/scripts.min.js"></script>
+<!--<script src="src/js/main.js"></script>-->
+<!--<script  src="src/js/hamburger.js"></script>-->
 </body>
 </html>
