--- a/form.html
+++ b/form.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="dist/css/main.css">
     <script src="src/js/main.js"></script>
-    <script src="src/js/picturefill.js"></script>
+    <script type="text/javascript" src="src/js/picturefill.js"></script>
+    <link rel="preload" href="dist/js/scripts.min.js" as="script">
     <link rel="preload" href="src/js/main.js" as="script">
     <link rel="preload" href="src/fonts/opensans-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="src/fonts/opensans-bold.woff2" as="font" type="font/woff2" crossorigin>
@@ -177,6 +178,6 @@
                </div>
             </div>
         </footer>
-       <script  src="src/js/hamburger.js"></script>
+        <script type="text/javascript" src="dist/js/scripts.min.js"></script>
    </body>
 </html>
