--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="dist/css/main.css">
-    <script type="text/javascript" src="dist/js/scripts.min.js"></script>
     <script type="text/javascript" src="src/js/picturefill.js"></script>
     <link rel="preload" href="dist/js/scripts.min.js" as="script">
     <link rel="preload" href="src/fonts/opensans-regular.woff2" as="font" type="font/woff2" crossorigin>
@@ -51,9 +50,7 @@
                                </form>
                            </li>
                            <li class="menu-top__item menu-top__item--cart">
-                                <a class="menu-top__link menu-top__link--cart" href="#"><span class="menu-top__cart"></span>
-                                  Корзина: пока пуста
-                                </a>
+                                <a class="menu-top__link menu-top__link--cart" href="#"><span class="menu-top__link-cart"></span>Корзина: пока пуста</a>
                            </li>
                            <li class="menu-top__item menu-top__item--delivery">
                                <p class="menu-top__text menu-top__text--delivery">Бесплатная доставка по России</p>
@@ -73,15 +70,10 @@
                     <ul class="menu-bottom__list">
                         <span class="menu-bottom__line"></span>
                     <li class="menu-bottom__item">
-                       <!-- <h3 class="menu-bottom__caption"> -->
                             <a class="menu-bottom__link menu-bottom__link--left" href="#">Предметы интерьера</a>
-                       <!-- </h3>    -->
                     </li>
                     <li class="menu-bottom__item">
-                        <!-- <span class="menu-bottom__icon2 icon"></span> -->
-                        <!-- <h3 class="menu-bottom__caption"> -->
                             <a class="menu-bottom__link menu-bottom__link--right" href="#">Детские игрушки</a>
-                        <!-- </h3> -->
                     </li>
                   </ul>
                   </div>
@@ -148,14 +140,18 @@
       </section>
       <section class="about-us">
         <h3 class="about-us__title">Коротко о нас:</h3>
-          <ul class="about-us__list">
-              <li class="about-us__feature ">Экологически чистые материалы</li>
-              <li class="about-us__feature">Скандинавский стиль по российской цене</li>
-              <li class="about-us__feature">Увеличивает лайки на фотографиях</li>
-              <li class="about-us__feature">Связано вручную с любовью и умилением</li>
-              <li class="about-us__feature">Поддержка отечественного производителя</li>
-              <li class="about-us__feature">Поставляется в подарочной упаковке</li>
+        <div class="about-us__list">
+            <ul class="about-us__features">
+              <li class="about-us__feature about-us__feature--fabric">Экологически чистые <br> материалы</li>
+              <li class="about-us__feature about-us__feature--style">Скандинавский стиль по российской цене</li>
+              <li class="about-us__feature about-us__feature--likes">Увеличивает лайки на фотографиях</li>
+           </ul>
+           <ul class="about-us__features">
+              <li class="about-us__feature about-us__feature--love">Связано вручную с любовью и умилением</li>
+              <li class="about-us__feature about-us__feature--native">Поддержка отечественного производителя</li>
+              <li class="about-us__feature about-us__feature--box">Поставляется в подарочной упаковке</li>
           </ul>
+          </div>
      </section>
      <section class="slider">
          <div class="slider__bg">
@@ -252,9 +248,6 @@
        </div>
     </div>
 </footer>
-<!-- <script  src="src/js/hamburger.js"></script>
-<script  src="src/js/slider.js"></script>
-<!--<script type="text/javascript" src="src/js/modal.js"></script>-->
-<!-- <script src="src/js/main.js"></script> --> 
+<script type="text/javascript" src="dist/js/scripts.min.js"></script>
 </body>
 </html>
