--- a/index.html
+++ b/index.html
@@ -105,19 +105,15 @@
                 </div>
                 <div class="catalog-card__picture">
                     <picture>
-                       <!-- <source media="(min-width: 320px)"
-                               srcset = "src/img/triple-mobile-2x.webp 2x, src/img/triple-mobile-1x.webp 1x" type ="image/webp"
-                               srcset = "src/img/triple-mobile-2x.jpg 2x, src/img/triple-mobile-1x.jpg 1x" type ="image/jpg"> -->
-                       <source media="(min-width: 320px) and (min-width: 768px) and (min-width: 1024px)"
-                                srcset = "src/img/triple-mobile-2x.webp 2x, src/img/triple-mobile-1x.webp 1x" type ="image/webp"
-                               srcset = "src/img/triple-mobile-2x.jpg 2x, src/img/triple-mobile-1x.jpg 1x" type ="image/jpg"
-                               srcset = "src/img/triple-tablet-2x.webp 2x, src/img/triple-tablet-1x.webp 1x" type ="image/webp"
-                               srcset = "src/img/triple-tablet-2x.jpg 2x, src/img/triple-tablet-1x.jpg 1x" type ="image/jpg"
+                        <source media="(min-width: 1024px)"
                                srcset = "src/img/triple-desktop-2x.webp 2x, src/img/triple-desktop-1x.webp 1x" type ="image/webp"
                                srcset = "src/img/triple-desktop-2x.jpg 2x, src/img/triple-desktop-1x.jpg 1x" type ="image/jpg">
-                       <!-- <source media="(min-width: 1024px)"
-                               srcset = "src/img/triple-desktop-2x.webp 2x, src/img/triple-desktop-1x.webp 1x" type ="image/webp"
-                               srcset = "src/img/triple-desktop-2x.jpg 2x, src/img/triple-desktop-1x.jpg 1x" type ="image/jpg"> -->
+                        <source media="(min-width: 768px)"
+                               srcset = "src/img/triple-tablet-2x.webp 2x, src/img/triple-tablet-1x.webp 1x" type ="image/webp"
+                               srcset = "src/img/triple-tablet-2x.jpg 2x, src/img/triple-tablet-1x.jpg 1x" type ="image/jpg">
+                        <source media="(min-width: 320px)"
+                               srcset = "src/img/triple-mobile-2x.webp 2x, src/img/triple-mobile-1x.webp 1x" type ="image/webp"
+                               srcset = "src/img/triple-mobile-2x.jpg 2x, src/img/triple-mobile-1x.jpg 1x" type ="image/jpg">
                        <img class="catalog-card__img" src="src/img/triple-mobile-1x.jpg" alt="Вязаные корзинки">
                    </picture>
                 </div>
@@ -204,6 +200,11 @@
            </div>
        </div>
     </section>
+    <section class="decoration">
+        <div class="decoration__wave">
+            <span class="decoration__line"></span>
+        </div>
+      </section>
     <section class="contacts">
         <div class="contacts__inner">
             <h3 class="contacts__title">Контакты</h3>
@@ -220,16 +221,16 @@
                 </div>
                 <div class="contacts__map">
                     <picture class="contacts__picture">
-                        <source media="(min-width: 320px) and (orientation: portrait)"
-                                srcset="src/img/map-mobile-2x.webp 2x, src/img/map-mobile-1x.webp 1x" type="image/webp"
-                                srcset="src/img/map-mobile-2x.jpg 2x, src/img/map-mobile-1x.jpg 1x" type="image/jpg">
-                        <source media="(min-width: 768px) and (orientation: portrait)"
-                                srcset="src/img/map-tablet-2x.webp 2x, src/img/map-tablet-1x.webp 1x" type="image/webp"
-                                srcset="src/img/map-tablet-2x.jpg 2x, src/img/map-tablet-1x.jpg 1x" type="image/jpg">
                         <source media="(min-width: 1024px)"
                                 srcset="src/img/map-desktop-2x.webp 2x, src/img/map-desktop-1x.webp 1x" type="image/webp"
                                 srcset="src/img/map-desktop-2x.jpg 2x, src/img/map-desktop-1x.jpg 1x" type="image/jpg">
-                       <img src="src/img/map-mobile-1x.jpg" alt="Map">
+                        <source media="(min-width: 768px)"
+                                srcset="src/img/map-tablet-2x.webp 2x, src/img/map-tablet-1x.webp 1x" type="image/webp"
+                                srcset="src/img/map-tablet-2x.jpg 2x, src/img/map-tablet-1x.jpg 1x" type="image/jpg">
+                        <source media="(min-width: 320px)"
+                                srcset="src/img/map-mobile-2x.webp 2x, src/img/map-mobile-1x.webp 1x" type="image/webp"
+                                srcset="src/img/map-mobile-2x.jpg 2x, src/img/map-mobile-1x.jpg 1x" type="image/jpg">
+                        <img src="src/img/map-mobile-1x.jpg" alt="Map">
                    </picture>
                </div>
             <button class="btn contacts__btn">Напишите нам</button>
